test/files/neg/override.check
override.scala:9: error: incompatible type in overriding
type T >: Int <: Int (defined in trait A)
  with type T >: String <: String (defined in trait B);
 found   :  >: String <: String
 required:  >: Int <: Int
  lazy val x : A with B = {println(""); x}
               ^
1 error
